????

    programmer visible changes:
    * Removed redundant imports using snakefood
    * Removed redundant file do_something.py

24/6/2014 0.9.14   Shai Shasag <shai@waves.com>

     user visible changes, client:
     * Names of curl config files have same legth due to 0 padding the number. This will creaet more stable
       progress report in a progress dialog.


22/6/2014 0.9.14   Shai Shasag <shai@waves.com>

     user visible changes, client:
     * new command test_import to force loading of all required modules provoking error if any import fails.


20/6/2014 0.9.13.1   Shai Shasag <shai@waves.com>
    user visible changes, client & admin:
    * Fixed exceptions in interactive mode - no functionality change.

16/6/2014 0.9.13   Shai Shasag <shai@waves.com>

    programmer visible changes:
    Integrated all var-stack features:
    * InstallItem creates it's own var_list.
    * InstallItem pushes it's own var_list to var_stack through 'with' statement.
    * All action lists for an Installitem are taken from var_stack with variables.

9/6/2014 0.9.12   Shai Shasag <shai@waves.com>

    user visible changes, client:
    * new variable __PYTHON_VERSION__ to record the version of python instl was compiled with

    user visible changes, admin:
    * Added option to limit stage2svn to specific folders, to save time.
    * up-repo-rev now creates a batch file like all other commands.
    * up-repo-rev does not use boto - depends on aws command line tools.
    * No more usage of AWS keys inside instl or created batch files. All AWS config comes from the ./aws/config file.

    programmer visible changes:
    * New resolve methods for ConfigVarList: resolve, resolve_to_list, replace previous methods: get_str, resolve_string
        get_list.New methods are faster and simpler to unserstand.
    * Tests for new resolve methods.
    * Removed unused member Configvar.__resolving_in_progress, preventing circular resolves is done in ConfigVarList.