@@ -1,5 +1,15 @@
 ????
 
+    user visible changes, client:
+    * Overhual of all actions names. New names are:
+    'pre_copy', 'pre_copy_to_folder', 'pre_copy_item',
+    'post_copy_item', 'post_copy_to_folder', 'post_copy',
+    'pre_remove', 'pre_remove_from_folder', 'pre_remove_item',
+    'remove_item', 'post_remove_item', 'post_remove_from_folder', 'post_remove'
+
+
+    user visible changes, admin:
+
     programmer visible changes:
     * Removed redundant imports using snakefood
     * Removed redundant file do_something.py
@@ -14,7 +24,7 @@
 22/6/2014 0.9.14   Shai Shasag <shai@waves.com>
 
      user visible changes, client:
-     * new command test_import to force loading of all required modules provoking error if any import fails.
+     * new command test-import to force loading of all required modules provoking error if any import fails.
 
 
 20/6/2014 0.9.13.1   Shai Shasag <shai@waves.com>
